added space images

--- a/index.html
+++ b/index.html
@@ -23,10 +23,26 @@
 
       <div class="grid-container">
         <div class="data-grid">
-          <div class="grid-item">Data Story 1</div>
-          <div class="grid-item">Data Story 2</div>
-          <div class="grid-item">Data Story 3</div>
-          <div class="grid-item">Data Story 4</div>
+          <div class="grid-item">
+            <img src="space1.jpg" alt="Data Image 1" />
+            <p>Data Description 1</p>
+            <a href="#">Learn more</a>
+          </div>
+          <div class="grid-item">
+            <img src="space2.jpg" alt="Data Image 2" />
+            <p>Data Description 2</p>
+            <a href="#">Learn more</a>
+          </div>
+          <div class="grid-item">
+            <img src="space3.jpg" alt="Data Image 3" />
+            <p>Data Description 3</p>
+            <a href="#">Learn more</a>
+          </div>
+          <div class="grid-item">
+            <img src="space4.jpg" alt="Data Image 4" />
+            <p>Data Description 4</p>
+            <a href="#">Learn more</a>
+          </div>
         </div>
 
         <div class="dance-grid">
