--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalist Page</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://rsms.me/" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
     <nav class="navbar">
       <ul>
-        <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
+        <li><a href="#">Resume</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
 
     <div class="container">
-      <p class="sentence">
+      <p class="special-sentence">
         I like telling stories with both <a href="#" id="dataLink">data</a> and
         <a href="#" id="danceLink">dance</a>.
       </p>
