hover underline animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <nav class="navbar">
       <ul>
+        <li class="logo">medinichopra</li>
         <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Contact</a></li>
@@ -19,8 +20,8 @@
 
     <div class="container">
       <p class="special-sentence">
-        I like telling stories with both <a href="#" id="dataLink">data</a> and
-        <a href="#" id="danceLink">dance</a>.
+        I like telling stories through <a href="#" class="underline-link" id="dataLink">data</a> and
+        <a href="#" class="underline-link" id="danceLink">dance</a>.
       </p>
 
       <div class="grid-container">
