--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalist Page</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+
     <nav class="navbar">
       <ul>
         <li class="logo">medinichopra</li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class = "underline-link"><a href="#">About</a></li>
+        <li class = "underline-link"><a href="#">Resume</a></li>
+        <li class = "underline-link"><a href="#">Contact</a></li>
       </ul>
     </nav>
 
@@ -48,12 +55,36 @@
           </div>
         </div>
 
+        <!-- make this into cards -->
+
         <div class="dance-grid">
           <div class="grid-item">Dance Story 1</div>
           <div class="grid-item">Dance Story 2</div>
           <div class="grid-item">Dance Story 3</div>
           <div class="grid-item">Dance Story 4</div>
         </div>
+
+        <div class = "container">
+          <div class = "row">
+            <div class = "col-sm-6">
+              <div class = "card">
+                <img src="space1.jpg" class = "card-img-top">
+                <div class = "card-body">
+                  <h5 class = "card-title">Project 1</h5>
+                </div>
+              </div>
+            </div>
+            <div class = "col-sm-6">
+              <div class = "card">
+                <img src="space1.jpg" class = "card-img-top">
+                <div class = "card-body">
+                  <h5 class = "card-title">Project 1</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
