edit the cursor

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalist Page</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://rsms.me/" />
@@ -13,21 +18,27 @@
   </head>
   <body>
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
     <!-- Bootstrap JS -->
-
+    <div class="cursor-trail"></div>
+    <div class="cursor"></div>
     <nav class="navbar">
       <ul>
         <li class="logo">medinichopra</li>
-        <li class = "underline-link"><a href="#">About</a></li>
-        <li class = "underline-link"><a href="#">Resume</a></li>
-        <li class = "underline-link"><a href="#">Contact</a></li>
+        <li class="underline-link"><a href="#">About</a></li>
+        <li class="underline-link"><a href="#">Resume</a></li>
+        <li class="underline-link"><a href="#">Contact</a></li>
       </ul>
     </nav>
 
     <div class="container">
       <p class="special-sentence">
-        I like telling stories through <a href="#" class="underline-link" id="dataLink">data</a> and
+        I like telling stories through
+        <a href="#" class="underline-link" id="dataLink">data</a> and
         <a href="#" class="underline-link" id="danceLink">dance</a>.
       </p>
 
@@ -64,30 +75,43 @@
           <div class="grid-item">Dance Story 4</div>
         </div>
 
-        <div class = "container">
-          <div class = "row">
-            <div class = "col-sm-6">
-              <div class = "card">
-                <img src="space1.jpg" class = "card-img-top">
-                <div class = "card-body">
-                  <h5 class = "card-title">Project 1</h5>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="card">
+                <img src="space1.jpg" class="card-img-top" />
+                <div class="card-body">
+                  <h5 class="card-title">Project 1</h5>
                 </div>
               </div>
             </div>
-            <div class = "col-sm-6">
-              <div class = "card">
-                <img src="space1.jpg" class = "card-img-top">
-                <div class = "card-body">
-                  <h5 class = "card-title">Project 1</h5>
+            <div class="col-sm-6">
+              <div class="card">
+                <img src="space2.jpg" class="card-img-top" />
+                <div class="card-body">
+                  <h5 class="card-title">Project 2</h5>
                 </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <img src="space3.jpg" class="card-img-top" />
+                <div class="card-body">
+                  <h5 class="card-title">Project 3</h5>
+                </div>
+              </div>
+            </div>
+          <div class="col-sm-6">
+            <div class="card">
+              <img src="space4.jpg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Project 4</h5>
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
