--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inknut Antiqua:wght@400&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/medinichopra.github.io/assets/global-JwX7c68B.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-JwX7c68B.css">
   </head>
   <body class="space-y-6">
     <div id="page1" class="c1 min-h-screen w-full overflow-y-hidden">
@@ -44,7 +44,7 @@
               <img
                 class="relative w-[78.6px] h-[77.9px] object-contain"
                 alt=""
-                src="/medinichopra.github.io/assets/globe-HMu-K62D.svg"
+                src="/assets/globe-HMu-K62D.svg"
               />
 
               <div
@@ -248,7 +248,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image6@2x-6NzjHDD1.png"
+                src="/assets/image6@2x-6NzjHDD1.png"
               />
             </div>
             <div
@@ -340,7 +340,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                src="/assets/image@2x-OjWSyJWM.png"
               />
             </div>
             <a
@@ -418,7 +418,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/medinichopra.github.io/assets/image6@2x-6NzjHDD1.png"
+                  src="/assets/image6@2x-6NzjHDD1.png"
                 />
               </div>
               <div
@@ -505,7 +505,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                  src="/assets/image@2x-OjWSyJWM.png"
                 />
               </div>
             </div>
@@ -535,7 +535,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                  src="/assets/image@2x-OjWSyJWM.png"
                 />
               </div>
             </div>
@@ -565,7 +565,7 @@
                 <img
                   class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                  src="/assets/image@2x-OjWSyJWM.png"
                 />
               </div>
             </div>
