--- a/sectionAbout.html
+++ b/sectionAbout.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inknut Antiqua:wght@400&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/medinichopra.github.io/assets/global-JwX7c68B.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-JwX7c68B.css">
   </head>
   <body>
     <section
@@ -48,7 +48,7 @@
             <img
               class="relative w-[78.6px] h-[77.9px] object-contain"
               alt=""
-              src="/medinichopra.github.io/assets/globe-HMu-K62D.svg"
+              src="/assets/globe-HMu-K62D.svg"
             />
 
             <div
@@ -105,7 +105,7 @@
                 <img
                   class="h-full w-full rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                  src="/assets/image@2x-OjWSyJWM.png"
                 />
               </div>
               <strong class="font-normal">Medini Chopra</strong>
