--- a/sectionCode.html
+++ b/sectionCode.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Plus Jakarta Sans:wght@600&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/medinichopra.github.io/assets/global-JwX7c68B.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-JwX7c68B.css">
   </head>
   <body>
     <div
