--- a/sectionData.html
+++ b/sectionData.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Plus Jakarta Sans:wght@600&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/medinichopra.github.io/assets/global-JwX7c68B.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-JwX7c68B.css">
   </head>
   <body>
     <section
@@ -55,7 +55,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image6@2x-6NzjHDD1.png"
+                src="/assets/image6@2x-6NzjHDD1.png"
               />
             </div>
             <div
@@ -130,7 +130,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                src="/assets/image@2x-OjWSyJWM.png"
               />
             </div>
           </div>
@@ -155,7 +155,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                src="/assets/image@2x-OjWSyJWM.png"
               />
             </div>
           </div>
@@ -180,7 +180,7 @@
               <img
                 class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                 alt=""
-                src="/medinichopra.github.io/assets/image@2x-OjWSyJWM.png"
+                src="/assets/image@2x-OjWSyJWM.png"
               />
             </div>
           </div>
