--- a/sectionAbout.html
+++ b/sectionAbout.html
@@ -105,7 +105,7 @@
                 <img
                   class="h-full w-full rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/image@2x.png"
+                  src="/public/linkedin dp.jpg"
                 />
               </div>
               <strong class="font-normal">Hi there</strong>
