--- a/sectionAbout.html
+++ b/sectionAbout.html
@@ -182,30 +182,35 @@
                 class="relative w-[51.4px] h-[56.7px] object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/vectorgoogle@2x.png"
+                href="mailto:medinichopra11@gmail.com"
               />
 
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/icongithub@2x.png"
+                href="https://github.com/medinichopra"
               />
 
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/iconlinkedin@2x.png"
+                href="https://www.linkedin.com/in/medini-chopra-44b950205/"
               />
 
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/medium-fill@2x.png"
+                
               />
 
               <img
                 class="relative w-[63px] h-[68px] overflow-hidden shrink-0 object-cover cursor-pointer"
                 alt="iconImage"
                 src="/public/icons-here@2x.png"
+                href="https://twitter.com/medinichopra_"
               />
             </div>
           </div>
