added one project image

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           >
             <div
               id="openTicketModal"
-              class="openNotionModal !cursor-pointer rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] overflow-hidden flex flex-col items-center justify-start py-[50px] px-[33px] gap-[21px] border-[1px] border-solid border-lightgray"
+              class="openNotionModal !cursor-pointer rounded-[20.03px] [background:linear-gradient(180.08deg,_#71d1b4,_#effffa)] overflow-hidden flex flex-col items-center justify-start py-[50px] px-[33px] gap-[21px] border-[1px] border-solid border-lightgray"
             >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-start gap-[11px]"
@@ -419,7 +419,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/image6@2x.png"
+                  src="/public/art thing.jpg"
                 />
               </div>
               <div
