--- a/sectionAbout.html
+++ b/sectionAbout.html
@@ -80,8 +80,7 @@
 
           <div class="relative group">
             <a
-            
-              href="https://raw.githubusercontent.com/medinichopra/medinichopra.github.io/main/Medini_Chopra_Graduate_CV.pdf"
+              href="https://drive.google.com/file/d/12zic17sGsLqvMeIINOB-uvSim6WYy9sU/view?usp=sharing"
               target="_blank"
               class="inline-block text-black no-underline transition-colors duration-300 ease-in-out group-hover:text-mediumaquamarine"
               >Resume</a
@@ -130,7 +129,6 @@
                 <b class="font-inter">
                   <span class="text-cadetblue"> </span>
                   <span class="text-lightseagreen">human-computer interaction, natural language processing and information retrieval.</span>
-                  <!-- <span class="text-colors-black-100">.</span> -->
                 </b>
                 
               </p>
