changed all project images

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/image@2x.png"
+                  src="/public/musicians.png"
                 />
               </div>
             </div>
@@ -537,7 +537,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/image@2x.png"
+                  src="/public/indian art.jpg"
                 />
               </div>
             </div>
@@ -558,16 +558,16 @@
                     My thoughts around the intersection
                   </p>
                   <p class="m-0 !cursor-pointer">
-                    of tech and society, ranging from AI ethics
+                    of tech and society, ranging from AI to 
                   </p>
-                  <p class="m-0 !cursor-pointer">to the future of work.</p>
+                  <p class="m-0 !cursor-pointer">privacy and algorithmic biases.</p>
                 </div>
               </div>
               <div class="relative !cursor-pointer w-[349px] h-[158px]">
                 <img
                   class="absolute h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/image@2x.png"
+                  src="/public/david.jpg"
                 />
               </div>
             </div>
