edited some text

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                   <div
                     class="relative !cursor-pointer text-mini tracking-[0.5px] leading-[26.4px] flex items-center w-[561px]"
                   >
-                    Is /askEngineers more toxic than /askWomenEngineers? Tap to
+                    Is r/askEngineers more toxic than r/askWomenEngineers? Tap to
                     find out>>
                   </div>
                 </div>
