--- a/sectionAbout.html
+++ b/sectionAbout.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About page</title>
+    <title>About</title>
     <link rel="icon"  type="image/png" href="/public/planet.png">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -136,7 +136,7 @@
               <p class="m-0 h-fit">
                 <span>
                   <span>
-                    <span class="font-inter">I'm currently researching encoding lyrics and audio features of a song to improve</span>
+                    <span class="font-inter">I'm currently looking at encoding lyrics and audio features of a song to improve</span>
                     <b class="font-inter"> recommendations </b>
                     <span>and finding the most accurate representation of music in latent space.</span>
                   </span>
