fixed project links

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               > -->
               <div class="relative group">
                 <a
-                  href="sectionAbout.html"
+                  href="about.html"
                   class="inline-block text-black no-underline transition-colors duration-300 ease-in-out group-hover:text-mediumaquamarine"
                   >About</a
                 >
@@ -394,10 +394,13 @@
           <div
             class="shrink-0 flex flex-row items-center justify-center max-h-fit lg:gap-11 xl:gap-10"
           >
-            <div
-              id="openTicketModal"
-              class="openNotionModal !cursor-pointer rounded-[20.03px] [background:linear-gradient(180.08deg,_#71d1b4,_#effffa)] overflow-hidden flex flex-col items-center justify-start py-[50px] px-[33px] gap-[21px] border-[1px] border-solid border-lightgray"
-            >
+          <a
+          href="https://medinichopra.notion.site/4031-574d8ecba3b043d8b82cf7edf808b051?pvs=74"
+          target="_blank"
+          rel="noopener"
+          id="openTicketModal"
+          class="openNotionModal no-underline text-black !cursor-pointer rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] overflow-hidden flex flex-col items-center justify-start py-[50px] px-[33px] gap-[21px] border-[1px] border-solid border-lightgray"
+        >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-start gap-[11px]"
               >
@@ -419,7 +422,7 @@
                 <img
                   class="absolute !cursor-pointer h-full w-full top-[0%] right-[0%] bottom-[0%] left-[0%] rounded-3xs max-w-full overflow-hidden max-h-full object-cover"
                   alt=""
-                  src="/public/art thing.jpg"
+                  src="/public/interactive.jpg"
                 />
               </div>
               <div
@@ -427,17 +430,20 @@
               >
                 <p class="m-0 !cursor-pointer">
                   using glass as a transparent medium for projection and
-                  holographic
+                  holographic!
                 </p>
-                <p class="m-0 !cursor-pointer">effects.</p>
+                <p class="m-0 !cursor-pointer">effects</p>
               </div>
-            </div>
+            </a>
             <div
               class="lg:gap-11 xl:gap-12 shrink-0 flex flex-col !cursor-pointer items-start justify-between py-0 box-border text-15xl font-inter"
             >
-              <div
-                class="openNotionModal !cursor-pointer openConfigureModal rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] shrink-0 flex flex-col items-center justify-center py-[70px] px-5 border-[1px] border-solid border-lightgray"
-              >
+            <a
+            href="https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view?usp=sharing"
+            target="_blank"
+            rel="noopener"
+            class="openNotionModal no-underline text-black !cursor-pointer openConfigureModal rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] shrink-0 flex flex-col items-center justify-center py-[70px] px-5 border-[1px] border-solid border-lightgray"
+          >
                 <div
                   class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[10px]"
                 >
@@ -449,13 +455,15 @@
                   <div
                     class="relative !cursor-pointer text-mini tracking-[0.5px] leading-[26.4px] flex items-center w-[561px]"
                   >
-                    Is r/askEngineers more toxic than r/askWomenEngineers? Tap to
-                    find out>>
+                    Is r/askEngineers more toxic than r/askWomenEngineers? 
                   </div>
                 </div>
-              </div>
-              <div
-                class="openNotionModal !cursor-pointer openConfigureModal rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] shrink-0 flex flex-col items-center justify-center py-[70px] px-5 border-[1px] border-solid border-lightgray"
+              </a>
+              <a
+                href="https://drive.google.com/file/d/1wIFXM52qYWoRnYQj5uzDINO7x7HeIsuk/view"
+                target="_blank"
+                rel="noopener"
+                class="openNotionModal no-underline text-black !cursor-pointer openConfigureModal rounded-[20.03px] [background:linear-gradient(180.08deg,_#62cbab,_#effffa)] shrink-0 flex flex-col items-center justify-center py-[70px] px-5 border-[1px] border-solid border-lightgray"
               >
                 <div
                   class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[10px]"
@@ -468,18 +476,21 @@
                   <div
                     class="relative !cursor-pointer text-mini tracking-[0.5px] leading-[26.4px] flex items-center w-[561px]"
                   >
-                    Interactive web-app to graph antimicrobial resistance trends
+                    Interactive web-app to graph antimicrobial resistance trends.
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
           <div
             class="w-full shrink-0 flex flex-row items-center justify-between text-5xl"
           >
-            <div
-              class="openNotionModal !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
-            >
+          <a
+          href="https://medinichopra.notion.site/medinichopra/tihai-99ed48d6c10d4acfa361a3f3e05a4d2a"
+          target="_blank"
+          rel="noopener"
+          class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+        >
               <div
                 class="shrink-0 flex flex-col items-start !cursor-pointer justify-center gap-[11px]"
               >
@@ -508,9 +519,12 @@
                   src="/public/musicians.png"
                 />
               </div>
-            </div>
-            <div
-              class="openNotionModal !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+            </a>
+            <a
+              href="https://medinichopra.notion.site/medinichopra/rasa-142ad643875342f68a8660a02829c554"
+              target="_blank"
+              rel="noopener"
+              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
             >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[11px]"
@@ -529,7 +543,7 @@
                     the emotion of a given Indian painting
                   </p>
                   <p class="m-0 !cursor-pointer">
-                    based on Eastern Aesthetics theories
+                    based on Eastern Aesthetics theories.
                   </p>
                 </div>
               </div>
@@ -540,9 +554,12 @@
                   src="/public/indian art.jpg"
                 />
               </div>
-            </div>
-            <div
-              class="openNotionModal !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
+            </a>
+            <a
+              href="https://medinichopra.notion.site/medinichopra/Tiny-Tech-Tales-c328e70ce40d4a4a82fc4bdecbb39e4b"
+              target="_blank"
+              rel="noopener"
+              class="openNotionModal no-underline text-black !cursor-pointer openMultiplayerModal rounded-[20.03px] [background:linear-gradient(180deg,_#effef4,_#eefffa)] shadow-[0px_4px_4px_rgba(0,_0,_0,_0.25)] overflow-hidden flex flex-col items-center justify-start py-[25px] px-[22px] gap-[25px] border-[1px] border-solid border-lightgray"
             >
               <div
                 class="shrink-0 flex flex-col !cursor-pointer items-start justify-center gap-[11px]"
@@ -570,7 +587,7 @@
                   src="/public/david.jpg"
                 />
               </div>
-            </div>
+            </a>
           </div>
         </main>
         <footer
@@ -880,17 +897,17 @@
     // });
 
     // Notion Modal
-    const notionModal = document.getElementById("notionModal");
-    const notionButtons = document.getElementsByClassName("openNotionModal");
-    const closeNotionModal = document.getElementById("closeNotionModal");
-    for (let i = 0; i < notionButtons.length; i++) {
-      notionButtons[i].addEventListener("click", function () {
-        window.open(
-          "https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view",
-          "_blank"
-        );
-      });
-    }
+    // const notionModal = document.getElementById("notionModal");
+    // const notionButtons = document.getElementsByClassName("openNotionModal");
+    // const closeNotionModal = document.getElementById("closeNotionModal");
+    // for (let i = 0; i < notionButtons.length; i++) {
+    //   notionButtons[i].addEventListener("click", function () {
+    //     window.open(
+    //       "https://drive.google.com/file/d/1uhOkIeETsgcgcdBRx-dgTD7oTUmaUvsk/view",
+    //       "_blank"
+    //     );
+    //   });
+    // }
 
     // notionModal.addEventListener("click", function (e) {
     //   if (e.target === notionModal) {
