--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
           >
           <div class="relative group">
             <a
-              href="sectionAbout.html"
+              href="about.html"
               class="inline-block text-black no-underline transition-colors duration-300 ease-in-out group-hover:text-mediumaquamarine"
               >About</a
             >
