--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About page</title>
+    <title>About</title>
     <link rel="icon"  type="image/png" href="/assets/planet-Tclqc7X_.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link
@@ -26,7 +26,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inknut Antiqua:wght@400&display=swap"
     />
-    <link rel="stylesheet" crossorigin href="/assets/global-3DOoerB3.css">
+    <link rel="stylesheet" crossorigin href="/assets/global-JwX7c68B.css">
   </head>
   <body>
     <section
@@ -69,7 +69,7 @@
           >
           <div class="relative group">
             <a
-              href="sectionAbout.html"
+              href="about.html"
               class="inline-block text-black no-underline transition-colors duration-300 ease-in-out group-hover:text-mediumaquamarine"
               >About</a
             >
@@ -136,7 +136,7 @@
               <p class="m-0 h-fit">
                 <span>
                   <span>
-                    <span class="font-inter">I'm currently researching encoding lyrics and audio features of a song to improve</span>
+                    <span class="font-inter">I'm currently looking at encoding lyrics and audio features of a song to improve</span>
                     <b class="font-inter"> recommendations </b>
                     <span>and finding the most accurate representation of music in latent space.</span>
                   </span>
